IMPALA-989: Fix overflow with decimal divide.

Change-Id: Ia56956e562a1ecc64fc04e4b07df12f3e0ff55e5
Reviewed-on: http://gerrit.ent.cloudera.com:8080/2503
Reviewed-by: Nong Li <nong@cloudera.com>
Tested-by: jenkins
Reviewed-on: http://gerrit.ent.cloudera.com:8080/2516